@@ -383,10 +383,9 @@ class LDAPBackingDirectory(BaseDirectory, Cacheable):
         self.insertLDAP(dn, ldap_attrs)
         return dn
 
-    security.declarePublic('deleteEntry')
-    def deleteEntry(self, id):
+    security.declarePrivate('_deleteEntry')
+    def _deleteEntry(self, id):
         """Delete an entry in the directory."""
-        self.checkDeleteEntryAllowed(id=id)
         if not self._hasEntry(id):
             raise KeyError("No entry '%s'" % id)
         self.deleteLDAP(id)
