@@ -200,10 +200,9 @@ class MembersDirectory(BaseDirectory):
         dm._commit()
 
 
-    security.declarePublic('deleteEntry')
-    def deleteEntry(self, id):
+    security.declarePrivate('_deleteEntry')
+    def _deleteEntry(self, id):
         """Delete an entry in the directory."""
-        self.checkDeleteEntryAllowed(id=id)
         if not self._hasEntry(id):
             raise KeyError("Members '%s' does not exist" % id)
         mtool = getToolByName(self, 'portal_membership')
