@@ -21,6 +21,7 @@ New internal features:
   publicly available in fields' TALES expressions context. They are no longuer
   part of the DirectoryTool but in a seperate non persistent util module.
 - CPS css_slot was renamed style_slot to comply with later CMF/Zope 3 standard.
-- CPSDirectory.utils.QueryMatcher: small object to prepare queries/match them with
-  entries.
+- CPSDirectory.utils.QueryMatcher: small object to prepare queries/match
+  them with entries.
 - Made the crossSetList method "tuple safe"
+- Added an unrestricted _deleteEntry in addition to deleteEntry.
